--- a/static/app/clientmanager/clientmanager.html
+++ b/static/app/clientmanager/clientmanager.html
@@ -17,7 +17,7 @@
                 </div>
                 <div ng-show="c.show" style="background-color: white;">
                     <ul style="line-height: 25px;list-style: decimal;">
-                        <li ng-repeat="v in c.newvideolist track by $index">
+                        <li ng-repeat="v in c.videolist track by $index">
                             <i class="icon glyphicon glyphicon-film"></i>
                             <span ng-click="v.show = true;" ng-show="!v.show" style="cursor: pointer;">
                                 {{$parent.videomap[v._id].name}}
